--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "BackendlessQt"]
 	path = BackendlessQt
-	url = https://github.com/RomanPodymov/BackendlessQt
+	url = /Users/romanpodymov/BackendlessQt
