--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "BackendlessQt"]
 	path = BackendlessQt
-	url = /Users/romanpodymov/BackendlessQt
+url=C:\\Users\\vojta\\OneDrive\\Dokumenty\\RocnikPracePraktickaCast\\BackendlessQt
