--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 build-BackendlessQt-Qt_6_7_2_for_macOS-Ladu011bnu00ed
 build/*
 MyBachelor.pro.user.b2c43e8
+MyBachelor_en_GB.qm
+MyBachelor_cs_CZ.qm
