--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Qt
-        uses: jurplel/install-qt-action@vč
+        uses: jurplel/install-qt-action@v4
 
       - name: Install dependencies
         run: |
