--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -13,6 +13,8 @@ jobs:
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
+        with:
+          version: '6.8.2'
 
       - name: Install dependencies
         run: |
